--- a/app/src/main/res/layout/fragment_fragment19.xml
+++ b/app/src/main/res/layout/fragment_fragment19.xml
@@ -45,24 +45,33 @@
         android:layout_width="260dp"
         android:layout_height="180dp"
         android:background="@drawable/slogan7"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="130dp"
         android:layout_gravity="center_horizontal"
 
         >
 
     </ImageView>
 
+    <ImageView
+        android:layout_width="240dp"
+        android:layout_height="190dp"
+        android:background="@drawable/slogan9"
+        android:layout_marginTop="325dp"
+        android:layout_gravity="center_horizontal"
 
+        >
+    </ImageView>
 
     <ImageView
         android:layout_width="230dp"
-        android:layout_height="230dp"
-        android:background="@drawable/slogan8"
-        android:layout_marginTop="400dp"
+        android:layout_height="180dp"
+        android:background="@drawable/slogan10"
+        android:layout_marginTop="530dp"
         android:layout_gravity="center_horizontal"
 
         >
     </ImageView>
+
 
 
 
