--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -145,7 +145,7 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:id="@+id/jumptoquiz3"
+                            android:id="@+id/jumptoquiz"
                             android:layout_width="65dp"
                             android:layout_height="60dp"
                             android:background="@drawable/homeoption"
