--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    
-    
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/container"
-        android:layout_above="@id/bottom_navigation"
-        />
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+    android:padding="50dp"
+    tools:context=".MainActivity"
+    android:background="@drawable/create_acc_"
+    >
+
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bottom_navigation"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu"
+        android:layout_marginTop="120dp"
+        android:gravity="center"
+        android:text="Create Account"
+        android:textColor="@color/white"
+        android:textSize="30dp" />
+
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="323dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="197dp"
+        android:background="@drawable/et_custom"
+        android:drawableLeft="@drawable/my_icon"
+        android:hint="                Username"
+        android:paddingLeft="15dp"
+
+
         />
 
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="392dp"
+        android:layout_height="64dp"
+        android:layout_below="@+id/username"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/et_custom"
+        android:drawableLeft="@drawable/baseline_password_24"
+        android:hint="                Password"
+        android:inputType="textPassword"
+        android:paddingLeft="15dp" />
+
+    <EditText
+        android:id="@+id/repassword"
+        android:paddingLeft="15dp"
+        android:layout_width="392dp"
+        android:layout_height="64dp"
+        android:layout_below="@+id/password"
+        android:layout_marginTop="30dp"
+        android:hint="          Confirm  password"
+        android:inputType="textPassword"
+        android:background="@drawable/et_custom"
+        android:drawableLeft="@drawable/baseline_lock_24"/>
+
+    <Button
+        android:id="@+id/btnsignup"
+        android:layout_width="318dp"
+        android:layout_height="64dp"
+        android:layout_below="@+id/repassword"
+        android:layout_marginTop="30dp"
+        android:text="Sign Up"
+        android:background="@drawable/signupbutton"
+
+
+
+        />
+
+    <Button
+        android:id="@+id/btnsignin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnsignup"
+        android:layout_marginTop="-530dp"
+        android:background="@android:color/transparent"
+        android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
+        android:text="Sign in" />
 
 </RelativeLayout>
