--- a/app/src/main/res/layout/activity_screen10.xml
+++ b/app/src/main/res/layout/activity_screen10.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Interface2"
-    android:background="@drawable/homebg"
-    >
+    tools:context="screen10"
+    android:background="@drawable/homebg">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
@@ -20,7 +19,7 @@
 
     <TextView
 
-        android:text="Discovery of Mauritius"
+        android:text="The French Period"
         android:layout_width="200dp"
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
@@ -28,7 +27,6 @@
         android:fontFamily="sans-serif-black"
         android:paddingTop="10dp"
         android:textAlignment="center"
-        android:textSize="20sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
 
         />
@@ -37,53 +35,48 @@
         android:layout_width="300dp"
         android:layout_height="1dp"
         android:background="@color/black"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="110dp"
         android:layout_gravity="center_horizontal"/>
 
-
     <TextView
-        android:text="The island had for a long time remained unknown and uninhabited.It was probably visited by Arab sailors during the Middle Ages, and on maps
-of about 1500, it is shown by an Arabic name `Dina Arobi'."
-        android:layout_marginTop="160dp"
+        android:text="Abandoned by the Dutch, the island became a French colony when, in September 1715, Guillaume Dufresne D'Arsel landed and took possession of this precious port of call on the route to India. He named the island 'Isle de France', but it was only in 1721 that the French started their occupation."
+        android:layout_marginTop="140dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="100dp"
+        android:layout_width="300dp"
+        android:layout_height="120dp"
 
 
         />
-
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:background="@drawable/discoveryofmauritius"
-        android:layout_marginTop="265dp"
+        android:layout_width="290dp"
+        android:layout_height="160dp"
+        android:background="@drawable/frenchperiod"
+        android:layout_marginTop="275dp"
         android:layout_marginStart="55dp"
 
         >
     </ImageView>
 
+
     <TextView
-        android:text="The Portuguese sailor Domingo Fernandez Pereira was probably the first European to land on the island at around 1511. The island appears with a Portuguese name `Cirne' on early Portuguese maps, probably because of the presence of the Dodo, a flightless bird which was found in great numbers at that time."
-        android:layout_marginTop="430dp"
+        android:text="However, it was only as from 1735, with the arrival of the most illustrious of French governor, Mahé de La Bourdonnais, that the 'Isle de France' started developing effectively."
+        android:layout_marginTop="450dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
+        android:layout_width="300dp"
         android:layout_height="120dp"
-
-
         />
 
     <TextView
-        android:text="It was another Portuguese sailor, Don Pedro Mascarenhas, who gave the name Mascarenes to the group of islands now known as Mauritius, Rodrigues and Reunion. The Portuguese did not stay long as they were not interested in these islands."
-        android:layout_marginTop="555dp"
+        android:text="Mahé de La Bourdonnais established Port Louis as a naval base and a ship-building centre. Under his governorship, numerous buildings were built, a number of which are still standing today - part of Government House, the Chateau de Mon Plaisir at Pamplemousses, the Line Barracks."
+        android:layout_marginTop="530dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
+        android:layout_width="300dp"
         android:layout_height="120dp"
-
-
         />
+
 
     <LinearLayout
         android:layout_width="match_parent"
