--- a/app/src/main/res/layout/activity_screen14.xml
+++ b/app/src/main/res/layout/activity_screen14.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Interface2"
-    android:background="@drawable/homebg"
-    >
+    tools:context="screen14"
+    android:background="@drawable/homebg">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
@@ -18,9 +17,10 @@
         >
     </ImageView>
 
+
     <TextView
 
-        android:text="Discovery of Mauritius"
+        android:text="The British Period"
         android:layout_width="200dp"
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
@@ -37,53 +37,52 @@
         android:layout_width="300dp"
         android:layout_height="1dp"
         android:background="@color/black"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="110dp"
         android:layout_gravity="center_horizontal"/>
 
-
     <TextView
-        android:text="The island had for a long time remained unknown and uninhabited.It was probably visited by Arab sailors during the Middle Ages, and on maps
-of about 1500, it is shown by an Arabic name `Dina Arobi'."
-        android:layout_marginTop="160dp"
-        android:layout_marginStart="50dp"
+        android:text="The British administration, which began with Robert Farquhar as governor, was followed by rapid social and economic changes. One of the most important events was the abolition of slavery in 1835. The planters received a compensation of two million pounds sterling for the loss of their slaves which had been imported from Africa and Madagascar during the French occupation."
+        android:layout_marginTop="125dp"
+        android:layout_marginStart="40dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="100dp"
-
+        android:layout_width="350dp"
+        android:layout_height="160dp"
 
         />
 
     <ImageView
         android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:background="@drawable/discoveryofmauritius"
-        android:layout_marginTop="265dp"
-        android:layout_marginStart="55dp"
+        android:layout_height="140dp"
+        android:background="@drawable/britishperiod"
+        android:layout_marginTop="270dp"
+        android:layout_marginStart="60dp"
 
         >
     </ImageView>
 
+
     <TextView
-        android:text="The Portuguese sailor Domingo Fernandez Pereira was probably the first European to land on the island at around 1511. The island appears with a Portuguese name `Cirne' on early Portuguese maps, probably because of the presence of the Dodo, a flightless bird which was found in great numbers at that time."
-        android:layout_marginTop="430dp"
-        android:layout_marginStart="50dp"
+        android:text="The abolition of slavery had important repercussions on the socio-economic and demographic fields. The planters turned to India, from where they brought a large number of indentured labourers to work in the sugar cane fields. The Indian immigrants, who were of both Hindu and Muslim faith, were to change rapidly the fabric of the society. They were later joined by a small number of Chinese traders."
+        android:layout_marginTop="425dp"
+        android:layout_marginStart="40dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="120dp"
+        android:layout_width="350dp"
+        android:layout_height="170dp"
+
 
 
         />
 
     <TextView
-        android:text="It was another Portuguese sailor, Don Pedro Mascarenhas, who gave the name Mascarenes to the group of islands now known as Mauritius, Rodrigues and Reunion. The Portuguese did not stay long as they were not interested in these islands."
-        android:layout_marginTop="555dp"
-        android:layout_marginStart="50dp"
+        android:text="Cultivation of sugar cane was given a boost and the island flourished, especially with the export of sugar to England. Economic progress necessitated the extension and improvement of means of communication and gradually an adequate infrastructure was created."
+        android:layout_marginTop="565dp"
+        android:layout_marginStart="40dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
+        android:layout_width="350dp"
         android:layout_height="120dp"
 
-
         />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -97,7 +96,7 @@ of about 1500, it is shown by an Arabic name `Dina Arobi'."
         android:id="@+id/nextButton"
         android:layout_width="80dp"
         android:layout_height="55dp"
-        android:layout_marginTop="660dp"
+        android:layout_marginTop="665dp"
         android:layout_marginStart="310dp"
         android:backgroundTint="@color/material_dynamic_primary95"
         android:textColor="@color/black"
