--- a/app/src/main/res/layout/activity_screen18.xml
+++ b/app/src/main/res/layout/activity_screen18.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Interface2"
-    android:background="@drawable/homebg"
-    >
+    tools:context="screen18"
+    android:background="@drawable/homebg">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
@@ -18,9 +17,11 @@
         >
     </ImageView>
 
+
+
     <TextView
 
-        android:text="Discovery of Mauritius"
+        android:text="Monuments"
         android:layout_width="200dp"
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
@@ -37,53 +38,58 @@
         android:layout_width="300dp"
         android:layout_height="1dp"
         android:background="@color/black"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="110dp"
         android:layout_gravity="center_horizontal"/>
 
-
     <TextView
-        android:text="The island had for a long time remained unknown and uninhabited.It was probably visited by Arab sailors during the Middle Ages, and on maps
-of about 1500, it is shown by an Arabic name `Dina Arobi'."
-        android:layout_marginTop="160dp"
+        android:text="Aapravasi Ghat"
+        android:layout_marginTop="125dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="100dp"
-
+        android:textsize="70sp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
 
         />
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:background="@drawable/discoveryofmauritius"
-        android:layout_marginTop="265dp"
+        android:layout_width="280dp"
+        android:layout_height="130dp"
+        android:background="@drawable/monument2"
+        android:layout_marginTop="160dp"
         android:layout_marginStart="55dp"
 
         >
     </ImageView>
 
+
     <TextView
-        android:text="The Portuguese sailor Domingo Fernandez Pereira was probably the first European to land on the island at around 1511. The island appears with a Portuguese name `Cirne' on early Portuguese maps, probably because of the presence of the Dodo, a flightless bird which was found in great numbers at that time."
-        android:layout_marginTop="430dp"
-        android:layout_marginStart="50dp"
+        android:text="By far one of the popular monuments in Mauritius, Aapravasi Ghat, which directly translates to “Immigration Depot”, where indentured labourers from India were sent as they arrived on the island. Situated right by the sea in the capital city of Port Louis, the site today has been declared a UNESCO World Heritage Site and contains the remains of the buildings that formed the complex used for indentured labourers during British colonial rule. There is also an interpretation centre and guided tours are offered (and highly recommended) in order for visitors to fully understand the significance of this site which saw some 500 000 indentured labourers in total pass through it between 1850 and 1923, to be used as labourers in British colonies and on the sugar plantations in Mauritius. It’s said that the ancestors of around 70% of the country’s population today arrived through this immigration depot. It’s a hugely significant site and well worth a visit."
+        android:layout_marginTop="305dp"
+        android:layout_marginStart="45dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="120dp"
+        android:layout_width="350dp"
+        android:layout_height="380dp"
+
 
 
         />
 
     <TextView
-        android:text="It was another Portuguese sailor, Don Pedro Mascarenhas, who gave the name Mascarenes to the group of islands now known as Mauritius, Rodrigues and Reunion. The Portuguese did not stay long as they were not interested in these islands."
-        android:layout_marginTop="555dp"
+        android:text=" Address: Port-Louis, Mauritius"
+        android:layout_marginTop="630dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="120dp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
 
 
         />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,7 +108,6 @@ of about 1500, it is shown by an Arabic name `Dina Arobi'."
         android:backgroundTint="@color/material_dynamic_primary95"
         android:textColor="@color/black"
         android:text="Next" />
-
 
 
 
