--- a/app/src/main/res/layout/activity_screen19.xml
+++ b/app/src/main/res/layout/activity_screen19.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Interface2"
-    android:background="@drawable/homebg"
-    >
+    tools:context="screen19"
+    android:background="@drawable/homebg">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
@@ -20,7 +19,7 @@
 
     <TextView
 
-        android:text="Discovery of Mauritius"
+        android:text="Monuments"
         android:layout_width="200dp"
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
@@ -32,58 +31,60 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
 
         />
-
     <FrameLayout
         android:layout_width="300dp"
         android:layout_height="1dp"
         android:background="@color/black"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="110dp"
         android:layout_gravity="center_horizontal"/>
 
-
     <TextView
-        android:text="The island had for a long time remained unknown and uninhabited.It was probably visited by Arab sailors during the Middle Ages, and on maps
-of about 1500, it is shown by an Arabic name `Dina Arobi'."
-        android:layout_marginTop="160dp"
+        android:text="Beau Plan Sugar Mill"
+        android:layout_marginTop="125dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="100dp"
-
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
 
         />
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:background="@drawable/discoveryofmauritius"
-        android:layout_marginTop="265dp"
-        android:layout_marginStart="55dp"
+        android:layout_width="280dp"
+        android:layout_height="140dp"
+        android:background="@drawable/monument1"
+        android:layout_marginTop="170dp"
+        android:layout_marginStart="60dp"
 
         >
     </ImageView>
 
+
     <TextView
-        android:text="The Portuguese sailor Domingo Fernandez Pereira was probably the first European to land on the island at around 1511. The island appears with a Portuguese name `Cirne' on early Portuguese maps, probably because of the presence of the Dodo, a flightless bird which was found in great numbers at that time."
-        android:layout_marginTop="430dp"
+        android:text="For those interested in the sugar trade in Mauritius, the Beau Plan Sugar Mill is a fabulous place to visit. It used to be an impressive sugar mill that built-in 1797 (and which was closed in 1999), and today is today a fascinating museum with an exhibit that explains the history of sugar in Mauritius and it covers everything from the sugar industry and slavery to the Mauritian rum trade. A tour of this beautiful monument in Mauritius can take between 2 and 3 hours and ends with a sugar tasting.
+
+Address: Pamplemousses, Mauritius"
+        android:layout_marginTop="340dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="120dp"
-
-
+        android:layout_width="300dp"
+        android:layout_height="380dp"
         />
 
     <TextView
-        android:text="It was another Portuguese sailor, Don Pedro Mascarenhas, who gave the name Mascarenes to the group of islands now known as Mauritius, Rodrigues and Reunion. The Portuguese did not stay long as they were not interested in these islands."
-        android:layout_marginTop="555dp"
+        android:text=" Address: Pamplemousses, Mauritius"
+        android:layout_marginTop="560dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="120dp"
-
+        android:textsize="30sp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
 
         />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,7 +103,6 @@ of about 1500, it is shown by an Arabic name `Dina Arobi'."
         android:backgroundTint="@color/material_dynamic_primary95"
         android:textColor="@color/black"
         android:text="Next" />
-
 
 
 
