--- a/app/src/main/res/layout/activity_screen20.xml
+++ b/app/src/main/res/layout/activity_screen20.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Interface2"
-    android:background="@drawable/homebg"
-    >
+    tools:context="screen20"
+    android:background="@drawable/homebg">
 
     <!-- TODO: Update blank fragment layout -->
+
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -15,12 +15,12 @@
         android:layout_marginTop="25dp"
         android:layout_marginStart="25dp"
 
-        >
-    </ImageView>
+        >  </ImageView>
+
 
     <TextView
 
-        android:text="Discovery of Mauritius"
+        android:text="Monuments"
         android:layout_width="200dp"
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
@@ -29,61 +29,64 @@
         android:paddingTop="10dp"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-
-        />
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"> </TextView>
 
     <FrameLayout
         android:layout_width="300dp"
         android:layout_height="1dp"
         android:background="@color/black"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="110dp"
         android:layout_gravity="center_horizontal"/>
 
-
     <TextView
-        android:text="The island had for a long time remained unknown and uninhabited.It was probably visited by Arab sailors during the Middle Ages, and on maps
-of about 1500, it is shown by an Arabic name `Dina Arobi'."
-        android:layout_marginTop="160dp"
+        android:text="Citadel Fort"
+        android:layout_marginTop="125dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="100dp"
-
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
 
         />
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:background="@drawable/discoveryofmauritius"
-        android:layout_marginTop="265dp"
-        android:layout_marginStart="55dp"
+        android:layout_width="260dp"
+        android:layout_height="145dp"
+        android:background="@drawable/monument3"
+        android:layout_marginTop="160dp"
+        android:layout_marginStart="70dp"
 
         >
     </ImageView>
 
+
+
     <TextView
-        android:text="The Portuguese sailor Domingo Fernandez Pereira was probably the first European to land on the island at around 1511. The island appears with a Portuguese name `Cirne' on early Portuguese maps, probably because of the presence of the Dodo, a flightless bird which was found in great numbers at that time."
-        android:layout_marginTop="430dp"
+        android:text="This military building, which also goes by the name Fort Adelaide, was built in the 19th century by the British to protect the British Army. It was interestingly constructed in a Moorish style and is a hugely popular site today given its unbelievable panoramic views of Port Louis and the harbour. You will get many souvenir shops nearby which once served as barracks of the fort. Also known as the Adelaide Fort and it was named after the wife of William II when the British held land in Port Louis. This ancient and iconic fort provides you with stunning views of the harbour and the entire city of Port Louis. Now the fort has been converted into a National monument of Mauritius. Surrounding the fort is also the Caudan Waterfront and the vast Indian Ocean. Fort Citadel remains a popular tourist destination and it provides stunning views of the city.
+"
+        android:layout_marginTop="320dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="120dp"
+        android:layout_width="320dp"
+        android:layout_height="380dp"
+
 
 
         />
 
     <TextView
-        android:text="It was another Portuguese sailor, Don Pedro Mascarenhas, who gave the name Mascarenes to the group of islands now known as Mauritius, Rodrigues and Reunion. The Portuguese did not stay long as they were not interested in these islands."
-        android:layout_marginTop="555dp"
+        android:text=" Address: Citadel Fort, Port-Louis, Mauritius"
+        android:layout_marginTop="625dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
-        android:layout_height="120dp"
-
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
 
         />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,7 +105,6 @@ of about 1500, it is shown by an Arabic name `Dina Arobi'."
         android:backgroundTint="@color/material_dynamic_primary95"
         android:textColor="@color/black"
         android:text="Next" />
-
 
 
 
