--- a/app/src/main/res/layout/activity_screen6.xml
+++ b/app/src/main/res/layout/activity_screen6.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Interface2"
-    android:background="@drawable/homebg"
-    >
+    tools:context="screen6"
+    android:background="@drawable/homebg">
 
     <!-- TODO: Update blank fragment layout -->
+
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -20,7 +20,7 @@
 
     <TextView
 
-        android:text="Discovery of Mauritius"
+        android:text="Arrival of the Dutch"
         android:layout_width="200dp"
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
@@ -28,62 +28,59 @@
         android:fontFamily="sans-serif-black"
         android:paddingTop="10dp"
         android:textAlignment="center"
-        android:textSize="20sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
 
         />
-
     <FrameLayout
         android:layout_width="300dp"
         android:layout_height="1dp"
         android:background="@color/black"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="110dp"
         android:layout_gravity="center_horizontal"/>
 
-
     <TextView
-        android:text="The island had for a long time remained unknown and uninhabited.It was probably visited by Arab sailors during the Middle Ages, and on maps
-of about 1500, it is shown by an Arabic name `Dina Arobi'."
-        android:layout_marginTop="160dp"
+        android:text="In 1598, a Dutch squadron, under the orders of Admiral Wybrand Van Warwyck, landed at Grand Port and named the island 'Mauritius', in honour of Prince Maurice Van Nassau, Stathouder of Holland."
+        android:layout_marginTop="140dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
+        android:layout_width="300dp"
         android:layout_height="100dp"
 
 
         />
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:background="@drawable/discoveryofmauritius"
-        android:layout_marginTop="265dp"
-        android:layout_marginStart="55dp"
+        android:layout_width="250dp"
+        android:layout_height="180dp"
+        android:background="@drawable/dutchperiod"
+        android:layout_marginTop="240dp"
+        android:layout_marginStart="75dp"
 
         >
     </ImageView>
 
     <TextView
-        android:text="The Portuguese sailor Domingo Fernandez Pereira was probably the first European to land on the island at around 1511. The island appears with a Portuguese name `Cirne' on early Portuguese maps, probably because of the presence of the Dodo, a flightless bird which was found in great numbers at that time."
-        android:layout_marginTop="430dp"
+        android:text="However, it was not until 1638 that there was a first attempt of Dutch settlement. It was from here that the famous Dutch navigator Tasman set out to discover the western part of Australia. The first Dutch settlement lasted only twenty years."
+        android:layout_marginTop="440dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
+        android:layout_width="300dp"
         android:layout_height="120dp"
 
 
         />
 
     <TextView
-        android:text="It was another Portuguese sailor, Don Pedro Mascarenhas, who gave the name Mascarenes to the group of islands now known as Mauritius, Rodrigues and Reunion. The Portuguese did not stay long as they were not interested in these islands."
+        android:text="Several attempts were subsequently made, but the settlements never developed enough to produce dividends and the Dutch finally left Mauritius in 1710. They are remembered for the introduction of sugar-cane, domestic animals and deer."
         android:layout_marginTop="555dp"
         android:layout_marginStart="50dp"
         android:textAlignment="center"
-        android:layout_width="310dp"
+        android:layout_width="300dp"
         android:layout_height="120dp"
 
 
         />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,6 +99,7 @@ of about 1500, it is shown by an Arabic name `Dina Arobi'."
         android:backgroundTint="@color/material_dynamic_primary95"
         android:textColor="@color/black"
         android:text="Next" />
+
 
 
 
