--- a/app/src/main/res/layout/activity_screen13.xml
+++ b/app/src/main/res/layout/activity_screen13.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".quizFrench"
+    tools:context="screen13"
     android:background="@drawable/homebg">
 
     <!-- TODO: Update blank fragment layout -->
