--- a/app/src/main/res/layout/activity_screen25.xml
+++ b/app/src/main/res/layout/activity_screen25.xml
@@ -45,7 +45,7 @@
     <ImageView
         android:layout_width="250dp"
         android:layout_height="190dp"
-        android:background="@drawable/slogan1"
+        android:background="@drawable/sloganone"
         android:layout_marginTop="170dp"
         android:layout_gravity="center_horizontal"
 
@@ -56,7 +56,7 @@
     <ImageView
         android:layout_width="250dp"
         android:layout_height="190dp"
-        android:background="@drawable/slogan2"
+        android:background="@drawable/slogantwo"
         android:layout_marginTop="395dp"
         android:layout_gravity="center_horizontal"
 
