--- a/app/src/main/res/layout/activity_screen26.xml
+++ b/app/src/main/res/layout/activity_screen26.xml
@@ -56,7 +56,7 @@
     <ImageView
         android:layout_width="250dp"
         android:layout_height="190dp"
-        android:background="@drawable/slogan3"
+        android:background="@drawable/sloganthree"
         android:layout_marginTop="395dp"
         android:layout_gravity="center_horizontal"
 
