--- a/app/src/main/res/layout/activity_screen345.xml
+++ b/app/src/main/res/layout/activity_screen345.xml
@@ -31,7 +31,7 @@
             android:layout_marginStart="100dp"
             android:fontFamily="sans-serif-black"
             android:paddingTop="10dp"
-            android:text="Arrival of the Dutch"
+            android:text="Discovery of Mauritius"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
@@ -61,11 +61,11 @@
             <TextView
 
                 android:layout_width="400dp"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:fontFamily="sans-serif-black"
                 android:paddingTop="10dp"
-                android:text="1.In which year did the Dutch land on Mauritius?"
+                android:text="1.What name did the Arabs give Mauritius when they came on the island?"
                 android:textAlignment="viewStart"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textSize="15sp"
@@ -84,7 +84,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:text="1968"
+                    android:text="Mascarene Islands"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
 
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:text="1940"
+                    android:text="Ile de France"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
@@ -109,7 +109,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:text="1598"
+                    android:text="St Brandon"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp" />
@@ -119,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:text="1999"
+                    android:text="Dina Arobi"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp" />
@@ -133,7 +133,7 @@
                 android:layout_marginStart="10dp"
                 android:fontFamily="sans-serif-black"
                 android:paddingTop="10dp"
-                android:text="2. What name did the Dutch give the island?"
+                android:text="2. What is the name of the first Portuguese sailor?"
                 android:textAlignment="viewStart"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textSize="15sp"
@@ -153,7 +153,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:text="Mascarene Islands"
+                    android:text="Don Pedro"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
 
@@ -164,7 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:text="Cirne"
+                    android:text="Domingo Fernandez Pereira"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
@@ -178,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:text="Mauritius"
+                    android:text="Bruno Fernandes"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp" />
@@ -188,7 +188,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:text="St Brandon"
+                    android:text="Don Pereira"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
@@ -197,10 +197,8 @@
             </RadioGroup>
 
 
-<!--            screen8-->
-
             <TextView
-                android:text="3. In which year did the Dutch attempt to settle in Mauritius?"
+                android:text="3. What name did the Portuguese give Mauritius?"
                 android:layout_width="400dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="10dp"
@@ -223,7 +221,7 @@
                 <RadioButton android:id="@+id/A"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="1638"
+                    android:text="Cirne"
                     android:layout_marginStart="10dp"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -233,7 +231,7 @@
                 <RadioButton android:id="@+id/B"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="1538"
+                    android:text="Ile de la Passe"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
@@ -246,7 +244,7 @@
                 <RadioButton android:id="@+id/C"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="1660"
+                    android:text="Portugal"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
@@ -255,7 +253,7 @@
                 <RadioButton android:id="@+id/D"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="1520"
+                    android:text="Rodrigues"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
@@ -268,7 +266,7 @@
 
             <TextView
 
-                android:text="4. For how many years did the Dutch stay on the island?"
+                android:text="4. Which bird did the Portuguese find on the island?"
                 android:layout_width="400dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="10dp"
@@ -292,7 +290,7 @@
                 <RadioButton android:id="@+id/one"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="3"
+                    android:text="Kestrel"
                     android:layout_marginStart="10dp"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -302,7 +300,7 @@
                 <RadioButton android:id="@+id/two"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="7"
+                    android:text="Dodo"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
@@ -315,7 +313,7 @@
                 <RadioButton android:id="@+id/three"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="20"
+                    android:text="Mauritius Parakeet"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
@@ -324,7 +322,7 @@
                 <RadioButton android:id="@+id/four"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="12"
+                    android:text="Pink Pigeon"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
@@ -334,11 +332,10 @@
 
             </RadioGroup>
 
-<!--            screen9-->
 
             <TextView
 
-                android:text="5.  When did the Dutch leave Mauritius?"
+                android:text="5. Why did the Portuguese not stay for long?"
                 android:layout_width="400dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
@@ -362,7 +359,7 @@
                     android:id="@+id/questionfivea"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="1700"
+                    android:text="They had no food on the island"
                     android:layout_marginStart="10dp"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -372,7 +369,7 @@
                     android:id="@+id/questionfiveb"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="1710"
+                    android:text="Rats ate their food"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
@@ -384,7 +381,7 @@
                     android:id="@+id/questionfivec"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="1720"
+                    android:text="There were frequent storms"
                     android:onClick="onRadioButtonClicked"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
@@ -395,7 +392,7 @@
                     android:id="@+id/questionfived"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="1730"
+                    android:text="They were not interested in this island"
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
