--- a/app/src/main/res/layout/activity_top_nature.xml
+++ b/app/src/main/res/layout/activity_top_nature.xml
@@ -200,7 +200,7 @@
             android:id="@+id/leMorne"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/le_morne"
+            android:background="@drawable/lemorne"
             />
     </androidx.cardview.widget.CardView>
 
