--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -13,7 +13,8 @@
         android:layout_height="30dp"
         android:src="@drawable/backblack"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"/>
+        android:layout_marginLeft="30dp"
+        android:id="@+id/backToHomeFromCurrency"/>
 
     <TextView
         android:layout_width="wrap_content"
