--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -15,7 +15,8 @@
         android:src="@drawable/backblack"
         android:backgroundTint="@null"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginLeft="20dp"
+        android:id="@+id/backToHomeFromEmergency"/>
 
     <ScrollView
         android:layout_width="match_parent"
