--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -77,35 +77,35 @@
                     android:orientation="horizontal">
 
 
-                    <LinearLayout
-                        android:layout_width="65dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginTop="10dp"
-                        android:orientation="vertical">
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="65dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="30dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:orientation="vertical">-->
 
-                        <FrameLayout
-                            android:layout_width="65dp"
-                            android:layout_height="60dp"
-                            android:background="@drawable/homeoption"
-                            android:padding="6dp">
+<!--                        <FrameLayout-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="60dp"-->
+<!--                            android:background="@drawable/homeoption"-->
+<!--                            android:padding="6dp">-->
 
-                            <ImageView
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
-                                android:layout_gravity="center_horizontal"
-                                android:src="@drawable/languages" />
+<!--                            <ImageView-->
+<!--                                android:layout_width="50dp"-->
+<!--                                android:layout_height="50dp"-->
+<!--                                android:layout_gravity="center_horizontal"-->
+<!--                                android:src="@drawable/languages" />-->
 
-                        </FrameLayout>
+<!--                        </FrameLayout>-->
 
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="3dp"
-                            android:text="language \ntranslate" />
+<!--                        <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginLeft="3dp"-->
+<!--                            android:text="language \ntranslate" />-->
 
-                    </LinearLayout>
+<!--                    </LinearLayout>-->
 
 
                     <LinearLayout
@@ -119,7 +119,9 @@
                             android:layout_width="65dp"
                             android:layout_height="60dp"
                             android:background="@drawable/homeoption"
-                            android:padding="6dp">
+                            android:padding="6dp"
+                            android:clickable="true"
+                            android:id="@+id/goToMap">
 
                             <ImageView
                                 android:layout_width="42dp"
@@ -183,7 +185,9 @@
                             android:layout_height="60dp"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/homeoption"
-                            android:padding="6dp">
+                            android:padding="6dp"
+                            android:clickable="true"
+                            android:id="@+id/goToEmergency">
 
                             <ImageView
                                 android:layout_width="45dp"
@@ -201,34 +205,34 @@
                     </LinearLayout>
 
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="30dp"
-                        android:orientation="vertical">
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="30dp"-->
+<!--                        android:orientation="vertical">-->
 
-                        <FrameLayout
-                            android:layout_width="65dp"
-                            android:layout_height="60dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@drawable/homeoption"
-                            android:padding="6dp">
+<!--                        <FrameLayout-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="60dp"-->
+<!--                            android:layout_marginTop="10dp"-->
+<!--                            android:background="@drawable/homeoption"-->
+<!--                            android:padding="6dp">-->
 
-                            <ImageView
-                                android:layout_width="45dp"
-                                android:layout_height="45dp"
-                                android:layout_marginLeft="5dp"
-                                android:background="@drawable/cloudy" />
-                        </FrameLayout>
+<!--                            <ImageView-->
+<!--                                android:layout_width="45dp"-->
+<!--                                android:layout_height="45dp"-->
+<!--                                android:layout_marginLeft="5dp"-->
+<!--                                android:background="@drawable/cloudy" />-->
+<!--                        </FrameLayout>-->
 
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:text="Weather" />
+<!--                        <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginTop="5dp"-->
+<!--                            android:text="Weather" />-->
 
-                    </LinearLayout>
+<!--                    </LinearLayout>-->
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -242,7 +246,8 @@
                             android:layout_height="60dp"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/homeoption"
-                            android:padding="6dp">
+                            android:padding="6dp"
+                            android:id="@+id/goToExchangeRate">
 
                             <ImageView
                                 android:layout_width="45dp"
@@ -290,7 +295,9 @@
                 android:layout_height="120dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/homehotelbg">
+                android:background="@drawable/homehotelbg"
+                android:clickable="true"
+                android:id="@+id/toHotel">
 
                 <TextView
                     android:layout_width="wrap_content"
