--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,16 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".map">
 
+
     <androidx.fragment.app.FragmentContainerView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/gmap"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintBaseline_toTopOf="parent"
         android:name="com.google.android.gms.maps.SupportMapFragment">
-
     </androidx.fragment.app.FragmentContainerView>
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/backblack"
+        android:id="@+id/backToHomeFromMap"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="40dp"
+        android:contentDescription="back button"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
