--- a/app/src/main/res/layout/activity_the_red_church.xml
+++ b/app/src/main/res/layout/activity_the_red_church.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/redChurch"
+            android:src="@drawable/redchurch"
             />
     </androidx.cardview.widget.CardView>
 
