--- a/app/src/main/res/layout/activity_top_places.xml
+++ b/app/src/main/res/layout/activity_top_places.xml
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:background="@drawable/redChurch"
+            android:background="@drawable/redchurch"
             />
     </androidx.cardview.widget.CardView>
 
