--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -55,9 +55,9 @@
                 android:textSize="16dp" />
 
             <SearchView
-                android:layout_width="372dp"
+                android:layout_width="340dp"
                 android:layout_height="58dp"
-                android:layout_marginLeft="30dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/searchborder"
                 android:theme="@style/CardView.Dark" />
