--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -34,9 +34,9 @@
             android:text="Get Started"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="620dp"
+            android:layout_gravity="bottom|center_horizontal"
             android:background="@drawable/welcomebutton"
+            android:layout_marginBottom="60dp"
             />
     </FrameLayout>
 
